# pollnow

./: LICENSE  README.md
.devcontainer/: devcontainer.json  postCreate.sh
docker/: Dockerfile.backend  Dockerfile.frontend  docker-comspose.yml
server/: .gitignore  db.sqlite  go.mod  main.go  pyproject.toml
server/api/: api.go  auth.go  poll.go
server/app/: app.go
server/app/models/: user.go
server/app/repo/: poll.go
server/app/services/: auth.go  poll.go
server/cmd/: main.go
server/perf/: data.json  generate_data.py  run_profile.py
server/pollnow/: auth.py  auth_token.py  dto.py  errors.py  main.py  mapping.py  models.py  poll.py  store.py  test.py
server/server/: app.go  server.go
server/server/store/: store.go
server/server/store/sql/: sql.go
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.tsx  Layout.tsx  bootstrap.ts  devBootstrap.ts  error.ts  main.ts  styles.css
webapp/src/api/: index.ts
webapp/src/app/: error.ts  index.ts
webapp/src/app/dto/: index.ts  poll.ts
webapp/src/app/models/: index.ts  poll.ts
webapp/src/app/repos/: index.ts  poll.ts
webapp/src/app/services/: auth.tsx  poll.tsx  settings.tsx
webapp/src/bootstrap/: development.ts  production.ts
webapp/src/components/: Header.tsx  Navbar.tsx
webapp/src/domain/: index.ts
webapp/src/infrastructure/: tokenStorage.ts
webapp/src/pages/: HomePage.tsx  LoginPage.tsx
webapp/src/services/: auth.tsx
webapp/src/ui/: App.tsx  Layout.tsx  error.ts  error.tsx  main.tsx  router.tsx  styles.css
webapp/src/utils/: index.ts
(+38 files in other folders)
