[project]
name = "pollnow"
version = "0.1.0"
description = ""
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel[asyncio] (>=0.0.24,<0.0.25)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
